# udcrgen

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.cpp  config.h  countstats.py  dynamic.cpp  dynamic.h  embed.cpp  embed.h  enumerate.cpp  enumerate.h  gencases.cpp  geometry.h  graph.cpp  graph.h  heuristic.cpp  heuristic.h  ipe.cpp  ipe.h  main.cpp  svg.cpp  svg.h  tests.cpp  translate.cpp  translate.h  wudcrgen.cpp  wudcrgen.h
accluster/: CMakeLists.txt  benchmark.sh  myqsub.sh
docs/: dependencies.ipe
input/: input.h
output/: csv.cpp  csv.h  ipe.cpp  ipe.h  svg.cpp  svg.h  translate.h
src/: config.cpp  config.h  dynamic.cpp  dynamic.h  embed.cpp  embed.h  enumerate.cpp  enumerate.h  gencases.cpp  heuristic.cpp  main.cpp
src/input/: input.cpp  input.h
src/output/: archive.cpp  archive.h  csv.cpp  csv.h  ipe.cpp  ipe.h  svg.cpp  svg.h  translate.cpp  translate.h
src/utility/: exception.cpp  exception.h  geometry.cpp  geometry.h  graph.cpp  graph.h  grid.cpp  grid.h  log.cpp  log.h  stat.h  util.cpp  util.h
test/: test_config.cpp  test_dynamic.cpp  test_embed.cpp  test_enumerate.cpp  test_graph.cpp  test_grid.cpp  test_heuristic.cpp  test_output.cpp  tests.cpp
thesis/: 1_introduction.tex  2_preliminaries.tex  3_related-work.tex  4_dynamic-program.tex  5_heuristic.tex  6_evaluation.tex  7_conclusion.tex  beamerthemeWien.sty  bsc_thesis.bib  bsc_thesis.tex  heuristic-approach.tex  presentation.tex
thesis/data/: aggregate-alternative.csv  aggregate.csv  aggregate.ods
thesis/graphics/: ch1_introduction.ipe  ch2_caterpillar_lobster.ipe  ch2_neighborhood.ipe  ch2_spinedgraph.ipe  ch2_tri-grid_x-monotone.ipe  ch4_dpexample.ipe  ch4_order.ipe  ch4_partialproblem.ipe  ch4_reach.ipe  ch4_reuse.ipe  ch5_affinity.ipe  ch5_principaldirection.ipe  ch6_diskgraph.ipe
thesis/slide-graphics/: background.ipe  background169.ipe  ch1_introduction_1.ipe  ch1_introduction_2.ipe  ch1_introduction_3.ipe  ch4_dpexample_slide.ipe  ch4_improvements.ipe  ch4_partialproblem_1.ipe  ch5_bfs.ipe  ch6_degree_notation.ipe
thesis/standalone/: accuracy.tex  runtime-dp-vs-h.tex  runtime-dp.tex  runtime-dpyes.tex  runtime-heuristic-bfs-alternative.tex  runtime-heuristic-bfs.tex  runtime-heuristic-dfs-alternative.tex  runtime-heuristic-dfs.tex
utility/: exception.cpp  exception.h  geometry.cpp  geometry.h  graph.cpp  graph.h  grid.cpp  grid.h  stat.h  util.cpp  util.h
